added 2 books and moved coffee over to page 2

--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Books</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="more-products.html">More Products</a>
+              <a class="nav-link" href="more-products.html">Coffee</a>
             </li>
             <li>
               <a class="nav-link" href="about.html">About</a>
@@ -146,7 +146,7 @@
     <div class="album py-5 bg-body-tertiary">
 
       <section class="container pb-4">
-        <h1>Category 1</h1>
+        <h1>Shop Books</h1>
       </section>
 
       <div class="container">
@@ -162,8 +162,6 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
                   <small class="text-body-secondary">$19.99</small>
                 </div>
@@ -180,8 +178,6 @@
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
                   <small class="text-body-secondary">$24.99</small>
                 </div>
@@ -194,12 +190,11 @@
               <img src="./images/book-HOL.jpg" alt="House of Leaves">
               <div class="card-body">
                 <p class="card-text"><strong>House of Leaves - Mark Z. Danielewski</strong>
-                  <br>A horror novel detailing
+                  <br>A horror novel detailing a young family who moves into a small home on Ash Tree Lane where 
+                  they discover something is terribly wrong: their house is bigger on the inside than it is on the outside.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
                   <small class="text-body-secondary">$21.99</small>
                 </div>
@@ -210,15 +205,14 @@
           <div class="col">
             <div class="card shadow-sm">
               <!--svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg-->
-              <img src="./images/book-Suff.jpg" alt="Self-Sus">
+              <img src="./images/book-Suff.jpg" alt="Self-Sufficiency">
               <div class="card-body">
                 <p class="card-text"><strong>The New Complete Book of Self-Sufficiency - John Seymour</strong>
-                  <br>A collection of guides for the
+                  <br>Embrace off-grid green living with this all-encompassing guide to self-sufficiency, your new go-to guide 
+                  for a more sustainable way of life.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
                   <small class="text-body-secondary">$25.99</small>
                 </div>
@@ -228,18 +222,16 @@
           <div class="col">
             <div class="card shadow-sm">
               <!--svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg-->
-            <img src="./images/coffee-WR.jpg" alt="Self-Sus">
+            <img src="./images/book-teabook.jpg" alt="The Tea Book">
               <div class="card-body">
-                <p class="card-text"><strong>White Russian Flavored Coffee</strong>
-                  <br>A delicious, creamy medium roast with notes of vanilla, kahlua, and cream. Great for when you want
-                  the taste of a late-night drink without the consequences.
+                <p class="card-text"><strong>The Tea Boom - Linda Gaylard</strong>
+                  <br>Matcha or chai? Bubble tea or Earl Grey? Whatever your tea of choice, this beautiful book shows you 
+                  everything you need to know to bring the fragrance and allure of the tea shop into your home.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
-                  <small class="text-body-secondary">$5.99</small>
+                  <small class="text-body-secondary">$24.99</small>
                 </div>
               </div>
             </div>
@@ -247,18 +239,15 @@
           <div class="col">
             <div class="card shadow-sm">
               <!--svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg-->
-            <img src="./images/coffee-CB.jpg" alt="Self-Sus">
+            <img src="./images/book-new-kitchen-garden.jpg" alt="Designing the New Kitchen Garden">
               <div class="card-body">
-                <p class="card-text"><strong>Creme Brulee Flavored Coffee</strong>
-                  <br>A delicious, creamy medium roast with notes of vanilla, kahlua, and cream. Great for when you want
-                  the taste of a late-night drink without the consequences.
+                <p class="card-text"><strong>Designing the New Kitchen Garden: An American Potager Handbook - Jennifer R. Bartley</strong>
+                  <br>A book that shows how the traditional features of the classic kitchen garden, or potager, can be adapted to contemporary needs and conditions.
                 </p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
                   </div>
-                  <small class="text-body-secondary">$5.99</small>
+                  <small class="text-body-secondary">$12.99</small>
                 </div>
               </div>
             </div>
@@ -274,9 +263,6 @@
       <p class="float-end mb-1">
         <a href="#">Back to top</a>
       </p>
-      <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-      <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a
-          href="../getting-started/introduction/">getting started guide</a>.</p>
     </div>
   </footer>
   <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
