--- a/about.html
+++ b/about.html
@@ -109,10 +109,10 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Books</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="more-products.html">More Products</a>
+            <a class="nav-link" href="more-products.html">Coffee</a>
           </li>
           <li>
             <a class="nav-link active" aria-current="page" href="about.html">About</a>
