--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 <header data-bs-theme="dark">
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Assignment 1</a>
+      <a class="navbar-brand" href="index.html">Assignment 1</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -132,7 +132,8 @@
     </section>
 
     <div class="container">
-        <p>Creators:<br> Nathan Turnis <br>Ella Knott</p>
+        <h4>SE/COMS 319</h4>
+        <p>Abraham Aldaco<br>9/23/2023<br>Creators:<br> Nathan Turnis - nturnis@iastate.edu <br>Ella Knott - edknott@iastate.edu</p>
     </div>
   </div>
 
@@ -143,8 +144,6 @@
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
   </div>
 </footer>
 <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
