--- a/midterm/testpage.html
+++ b/midterm/testpage.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Page</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
+  </head>
+  <body>
     <div class="container">
-        <div class="row row-cols-lg-4 gy-2 row-cols-sm-2 row-cols-1 d-flex">
-            <div class="col card border d-flex flex-column">
-                <div class="mb-3 d-flex justify-content-center align-items-center" style="height: 200px;">
-                    <img src="./images/book-Fox.jpg" class="img-fluid" style="max-height: 100%;">
-                </div>
-                <div class="overflow-hidden" style="height: 50px;">Name of Product Name of Product Name of Product Name of Product</div>
+      <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 gy-2 d-flex">
+        <div class="col d-flex flex-column">
+          <div class="card">
+            <div
+              class="mb-3 d-flex justify-content-center align-items-center"
+              style="height: 200px">
+              <img
+                src="./images/book-Fox.jpg"
+                class="img-fluid"
+                style="max-height: 100%" />
             </div>
-            <div class="col card border d-flex flex-column">
-                <div class="d-flex justify-content-center align-items-center" style="height: 200px;">
-                    <img src="./images/testimg.jpg" class="img-fluid" style="max-height: 100%;">
-                </div>
+            <div class="overflow-hidden px-3" style="height: 50px">
+              Name of Product
             </div>
-            <div class="col card border">Box</div>
-            <div class="col card border">Box</div>
-            <div class="col card border">Box</div>
-            <div class="col card border">Box</div>
+            <div class="mb-2 px-3 fw-bold">$19.99</div>
+            <div class="mb-2 px-3 d-grid">
+              <button type="button" class="btn btn-primary btn-sm">
+                Add To Cart
+              </button>
+            </div>
+          </div>
         </div>
+        <div class="col d-flex flex-column">
+          <div class="card">
+            <div
+              class="mb-3 d-flex justify-content-center align-items-center"
+              style="height: 200px">
+              <img
+                src="./images/testimg.jpg"
+                class="img-fluid"
+                style="max-height: 100%" />
+            </div>
+            <div class="overflow-hidden" style="height: 50px">
+              Name of Product Name of Product Name of Product Name of Product
+            </div>
+          </div>
+        </div>
+        <div class="col"><div class="card">Box</div></div>
+        <div class="col"><div class="card">Box</div></div>
+        <div class="col"><div class="card">Box</div></div>
+        <div class="col"><div class="card">Box</div></div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
