--- a/midterm/testpage.html
+++ b/midterm/testpage.html
@@ -31,8 +31,15 @@
             <div class="overflow-hidden px-3" style="height: 50px">
               Name of Product
             </div>
+            <div class="mb-3 px-3 d-flex">
+              <img
+                src="./images/ratings/rating-45.png"
+                class="img-fluid"
+                style="width: 100px" />
+              <div class="ms-2">127</div>
+            </div>
             <div class="mb-2 px-3 fw-bold">$19.99</div>
-            <div class="mb-2 px-3 d-grid">
+            <div class="mb-2 ms-4 me-4 px-3 d-grid">
               <button type="button" class="btn btn-primary btn-sm">
                 Add To Cart
               </button>
