--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home | Products</title>
+    <title>Cart</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -14,17 +14,6 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
-
-    <style>
-      #cart-counter {
-        position: relative;
-        top: 7px;
-        right: 20px;
-        font-size: large;
-        font-weight: bold;
-        color: white;
-      }
-    </style>
   </head>
   <body>
     <header data-bs-theme="dark">
@@ -43,7 +32,7 @@
             id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
               </li>
               <li class="navbar-item">
                 <a class="nav-link" href="./about.html">About</a>
@@ -57,26 +46,10 @@
                 aria-label="Search" />
               <button class="btn btn-success" type="submit">Search</button>
             </form>
-            <div class="d-flex">
-              <a href="./cart.html"
-                ><img
-                  src="./images/cart-icon.png"
-                  width="44px"
-                  class="ms-1 me-4"
-              /></a>
-              <div id="cart-counter">0</div>
-            </div>
+            <img src="./images/cart-icon.png" width="44px" class="ms-1 me-4" />
           </div>
         </div>
       </nav>
     </header>
-
-    <div class="container">
-      <div
-        class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 g-2 d-flex mt-5"
-        id="products-grid"></div>
-    </div>
-    <script src="./index.js"></script>
-    <script src="./cart.js"></script>
   </body>
 </html>
