--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -14,6 +14,17 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
+
+    <style>
+      #cart-counter {
+        position: relative;
+        top: 7px;
+        right: 20px;
+        font-size: large;
+        font-weight: bold;
+        color: white;
+      }
+    </style>
   </head>
   <body>
     <header data-bs-theme="dark">
@@ -46,7 +57,15 @@
                 aria-label="Search" />
               <button class="btn btn-success" type="submit">Search</button>
             </form>
-            <img src="./images/cart-icon.png" width="44px" class="ms-1 me-4" />
+            <div class="d-flex">
+              <a href="./cart.html"
+                ><img
+                  src="./images/cart-icon.png"
+                  width="44px"
+                  class="ms-1 me-4"
+              /></a>
+              <div id="cart-counter">0</div>
+            </div>
           </div>
         </div>
       </nav>
