--- a/midterm/index.html
+++ b/midterm/index.html
@@ -51,11 +51,14 @@
             </ul>
             <form class="d-flex" style="max-width: 800px; width: 100%">
               <input
+                id="search-input"
                 class="form-control me-2"
                 type="search"
                 placeholder="Search"
                 aria-label="Search" />
-              <button class="btn btn-success" type="submit">Search</button>
+              <button class="btn btn-success" type="submit" onclick="search()">
+                Search
+              </button>
             </form>
             <div class="d-flex">
               <a href="./cart.html"
