--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -70,5 +70,11 @@
         </div>
       </nav>
     </header>
+
+    <div class="container mt-3">
+      <h2>Items in cart:</h2>
+    </div>
+
+    <script src="./cart.js"></script>
   </body>
 </html>
