--- a/midterm/index.html
+++ b/midterm/index.html
@@ -61,7 +61,7 @@
               </button>
             </form>
             <div class="d-flex">
-              <a href="./cart.html"
+              <a href="./cart.html" onclick="storeCart()"
                 ><img
                   src="./images/cart-icon.png"
                   width="44px"
