can now remove items from cart

--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -72,7 +72,10 @@
     </header>
 
     <div class="container mt-3">
-      <h2>Items in cart:</h2>
+      <h2 id="items-in-cart">Items in cart:</h2>
+      <button class="btn btn-primary" onclick="removeFromCart()">
+        Remove from cart
+      </button>
     </div>
 
     <script src="./cart.js"></script>
