--- a/midterm/index.html
+++ b/midterm/index.html
@@ -30,7 +30,7 @@
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand">Saraha</a>
+          <a class="navbar-brand">Sahara</a>
           <button
             class="navbar-toggler"
             type="button"
