working on cart

--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -75,8 +75,8 @@
       <h3>Review your order</h3>
       <div class="row g-3">
         <div class="col-md-8">
-          <div class="card p-3">
-            <div id="product-1" class="d-flex p-1">
+          <div class="card p-3" id="cart-products">
+            <!-- <div class="d-flex p-1">
               <img
                 src="./images/products/basketball.jpg"
                 class="img-fluid me-3"
@@ -102,7 +102,7 @@
                   >
                 </div>
               </div>
-            </div>
+            </div> 
             <div id="product-2" class="d-flex p-1 mb-3">
               <img
                 src="./images/products/basketball.jpg"
@@ -129,7 +129,7 @@
                   >
                 </div>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
         <div class="col-6 col-md-4">
