cart now should fully work

--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -75,7 +75,7 @@
       <h3>Review your order</h3>
       <div class="row g-3">
         <div class="col-md-8">
-          <div class="card p-3" id="cart-products">
+          <div class="card p-3 mb-5" id="cart-products">
             <!-- <div class="d-flex p-1">
               <img
                 src="./images/products/basketball.jpg"
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="col-6 col-md-4">
-          <div class="card p-3">
+          <div class="card p-3 mb-5">
             <h2 id="items-in-cart">Items in cart:</h2>
             <p>Total</p>
             <div class="d-flex justify-content-start">
