total price added

--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -81,7 +81,10 @@
         <div class="col-6 col-md-4">
           <div class="card p-3 mb-5">
             <h2 id="items-in-cart">Items in cart:</h2>
-            <p>Total</p>
+            <div class="d-flex justify-content-between">
+              <p>Total</p>
+              <p id="total-price">$0.00</p>
+            </div>
             <div class="d-flex justify-content-start">
               <div class="form-check form-check-inline">
                 <input
