--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -43,7 +43,7 @@
             id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="./index.html">Home</a>
+                <a class="nav-link" href="./index.html">Products</a>
               </li>
               <li class="navbar-item">
                 <a class="nav-link" href="./about.html">About</a>
