--- a/midterm/index.html
+++ b/midterm/index.html
@@ -43,7 +43,7 @@
             id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Home</a>
+                <a class="nav-link active" href="#">Products</a>
               </li>
               <li class="navbar-item">
                 <a class="nav-link" href="./about.html">About</a>
@@ -76,7 +76,7 @@
 
     <div class="container">
       <div
-        class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 g-2 d-flex mt-5"
+        class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 g-2 d-flex mt-5 mb-5"
         id="products-grid"></div>
     </div>
     <script src="./index.js"></script>
