--- a/midterm/about.html
+++ b/midterm/about.html
@@ -25,6 +25,8 @@
         color: white;
       }
     </style>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header data-bs-theme="dark">
@@ -70,6 +72,25 @@
         </div>
       </nav>
     </header>
+
+    <div class="container">
+      <div class="mt-3 border-bottom border-black">
+        <h1>About The Developers</h1>
+      </div>
+      <div class="mt-3">
+        <h4>SE/ComS319 Construction of User Interfaces, Spring 2023</h4>
+        <h5>Date: 10/18/23</h5>
+      </div>
+      <div class="mt-5">
+        <h3>Authors:</h3>
+        <p class="test">Nathan Turnis - nturnis@iastate.edu</p>
+        <p class="test">Ella Knott - edknott@iastate.edu</p>
+      </div>
+      <div class="thank-you p-5 rounded-3">
+        <h1>Thanks for checking out our site!</h1>
+      </div>
+    </div>
+
     <script src="./cart.js"></script>
   </body>
 </html>
