--- a/midterm/cart.html
+++ b/midterm/cart.html
@@ -74,11 +74,11 @@
     <div class="container mt-5">
       <h3>Review your order</h3>
       <div class="row g-3">
-        <div class="col-md-8">
+        <div class="col-lg-8 col-12">
           <div class="card p-3 mb-5" id="cart-products"></div>
         </div>
 
-        <div class="col-6 col-md-4">
+        <div class="col-12 col-lg-4">
           <div class="card p-3 mb-5">
             <h2 id="items-in-cart">Items in cart:</h2>
             <div class="d-flex justify-content-between">
