now ready to submit

--- a/midterm/about.html
+++ b/midterm/about.html
@@ -83,8 +83,8 @@
       </div>
       <div class="mt-5">
         <h3>Authors:</h3>
-        <p class="test">Nathan Turnis - nturnis@iastate.edu</p>
-        <p class="test">Ella Knott - edknott@iastate.edu</p>
+        <p class="text-cool">Nathan Turnis - nturnis@iastate.edu</p>
+        <p class="text-cool">Ella Knott - edknott@iastate.edu</p>
       </div>
       <div class="thank-you p-5 rounded-3">
         <h1>Thanks for checking out our site!</h1>
